--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>NASA APOD</title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="header">
+        <h1>Astronomy Picture of the Day</h1>
+        <h2 class="title"></h2>
+        <p class="date"></p>
+      </div>
+      <div class="data">
+          <img src="" class="picture" alt="Image by NASA" />
+          <p class="explanation"></p>
+      </div>
+    </div>
     <script type="text/javascript" src="config.js"></script>
     <script type="module" src="index.js"></script>
   </body>
